# chain-sniper

./: .gitignore  README.md  __init__.py  main.py  pyproject.toml
abstracts/: base_strategy.py
chain_sniper/: __init__.py  sniper.py  types.py
chain_sniper/abstracts/: base_filter.py
chain_sniper/contracts/: __init__.py
chain_sniper/engine/: pipeline.py
chain_sniper/filters/: __init__.py  _filter.py  base.py  contract_call_filter.py  dynamic_filter.py  transfer_filter.py
chain_sniper/listener/: __init__.py  common.py  poll_listener.py  redis_rule_listener.py  websocket_listener.py
chain_sniper/parser/: block_fetcher.py  block_parser.py  block_processor.py  event_dispatcher.py  log_decoder.py  rule_parser.py  topics.py  tx_parser.py
chain_sniper/rpc_pool/: __init__.py  rpc_node.py  rpc_pool.py
chain_sniper/strategy/: user_strategy.py
chain_sniper/utils/: __init__.py  abi_filter.py  (+6 more)
core/: config.py
engine/: pipeline.py  worker.py
examples/: decode_input_data_example.py  push_redis_rule.py  simple_transfer_monitor.py  track_address_with_filters.py  watch_blocks.py  watch_blocks_poll.py  watch_erc20.py  watch_erc20_http.py  watch_native_wss.py  watch_transactions.py  watch_transactions_dynamic_filter.py  watch_transactions_formatted.py  watch_transactions_on_transaction.py  watch_with_dynamic_filter.py
filters/: contract_call_filter.py  dynamic_filter.py  transfer_filter.py
listener/: poll_listener.py  redis_rule_listener.py  websocket_listener.py
parser/: block_parser.py
strategy/: user_strategy.py
tests/: decode_log.py  ws_provider.py
